--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="searchList">
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+
+    <script src="js/angular.min.js"></script>
+    <script src="js/app.js"></script>
   </head>
-  <body>
+
+  <body ng-controller="searchInput as input">
     <div class="container">
-      <h1>Narrow Down Your Chinese Menu Choice</h1>
+      <div class="row">
+        <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-      <div class="form-group">
-        <input type="text" placeholder="search term" class="form-control" />
+        <div class="form-group">
+          <input
+            type="text"
+            ng-model="input.search"
+            placeholder="search term"
+            class="form-control"
+          />
+        </div>
+        <div class="form-group narrow-button">
+          <button class="btn btn-primary" ng-click="input.consoleData()">
+            Narrow It Down For Me!
+          </button>
+        </div>
       </div>
-      <div class="form-group narrow-button">
-        <button class="btn btn-primary">Narrow It Down For Me!</button>
-      </div>
-
       <!-- found-items should be implemented as a component -->
-      <found-items found-items="...." on-remove="...."></found-items>
+      <div ng-show="input.search" ng-repeat="item in input.found " class="row">
+        <ul>
+          <found-items></found-items>
+        </ul>
+      </div>
+      <!-- <found-items  on-remove="...."></found-items> -->
     </div>
+    <p class="container alert alert-danger" ng-show="input.error">
+      No item in the list match the input
+    </p>
+    <p class="container alert alert-danger" ng-show="input.error2">
+      You deleted every item in the list
+    </p>
   </body>
 </html>
